[package]
name = "ttyrec-bin"
version = "0.1.3"
authors = ["Jesse Luehrs <doy@tozt.net>"]
edition = "2021"

description = "record and play back ttyrec files"
repository = "https://git.tozt.net/ttyrec-bin"
readme = "README.md"
keywords = ["ttyrec"]
categories = ["command-line-utilities"]
license = "MIT"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]

[dependencies]
anyhow = "1.0.55"
futures-util = "0.3.21"
libc = "0.2.119"
paw = "1.0.0"
pty-process = { version = "0.2.0", features = ["async"] }
structopt = { version = "0.3.26", features = ["paw", "wrap_help"] }
terminal_size = "0.1.17"
textmode = { version = "0.3.0", features = ["async"] }
tokio = { version = "1.17.0", features = ["full"] }
ttyrec = { version = "0.3.3", features = ["async"] }
vt100 = "0.15.1"

[patch.crates-io]
nix = { git = "https://github.com/nix-rust/nix" }
pty-process = { git = "https://github.com/doy/pty-process" }
textmode = { git = "https://github.com/doy/textmode" }
ttyrec = { git = "https://github.com/doy/ttyrec" }
