[package]
name = "ttyrec-bin"
version = "0.1.3"
authors = ["Jesse Luehrs <doy@tozt.net>"]
edition = "2021"

description = "record and play back ttyrec files"
repository = "https://git.tozt.net/ttyrec-bin"
readme = "README.md"
keywords = ["ttyrec"]
categories = ["command-line-utilities"]
license = "MIT"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["wrap_help", "derive"] }
futures-util = "0.3.26"
libc = "0.2.139"
pty-process = { version = "0.3.0", features = ["async"] }
terminal_size = "0.2.5"
textmode = { version = "0.4.0", features = ["async"] }
tokio = { version = "1.26.0", features = ["full"] }
ttyrec = { version = "0.4.0", features = ["async"] }
vt100 = "0.15.2"
